--- a/inspections/templates/inspections/inspection_detail.html
+++ b/inspections/templates/inspections/inspection_detail.html
@@ -257,7 +257,7 @@
                     {% if inspection.customer %}
                     <div class="mb-3">
                         <strong>{% trans 'الاسم' %}:</strong>
-                        <div>{{ inspection.customer.name }}</div>
+                                                        <div><strong>{{ inspection.customer.name }}</strong></div>
                     </div>
                     <div class="mb-3">
                         <strong>{% trans 'رقم الهاتف' %}:</strong>
