--- a/installations/templates/installations/installation_detail.html
+++ b/installations/templates/installations/installation_detail.html
@@ -76,7 +76,7 @@
                                 </tr>
                                 <tr>
                                     <th>اسم العميل:</th>
-                                    <td>{{ installation.order.customer.name }}</td>
+                                    <td><strong>{{ installation.order.customer.name }}</strong></td>
                                 </tr>
                                 <tr>
                                     <th>رقم الهاتف:</th>
